# boning-mlir

./: .clang-tidy  .gitignore  .gitmodules  .hadolint.yml  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  build.sh  clean_dir.sh  pre-commit.yaml  pyproject.toml
.github/workflows/: codestyle-check.yml  docker-image.yml  pr-docker-image.yml  test-build.yml
cmake/: 3rdparty.cmake  init.cmake
examples/: dis_ex.py  mlir_ex.py  output.mlir  tempCodeRunnerFile.py  test.mlir  torch_ex.py
examples/lib/CAPI/: CMakeLists.txt
midend/include/Boning/: BoningDialect.h  BoningDialect.td  BoningOps.h  BoningOps.td  BoningPasses.h  BoningPasses.td  BoningTypes.h  BoningTypes.td  CMakeLists.txt
midend/lib/: CMakeLists.txt
midend/lib/Boning/: BoningDialect.cpp  BoningOps.cpp  BoningPasses.cpp  BoningTypes.cpp  CMakeLists.txt
tools/: CMakeLists.txt
tools/boning-mlir-lsp-server/: CMakeLists.txt  torch-mlir-lsp-server.cpp
tools/boning-opt/: CMakeLists.txt  boning-opt.cpp
tools/boning-translate/: CMakeLists.txt  boning-translate.cpp
